# code

opencc-gtk/: CMakeLists.txt
opencc-gtk/src/: CMakeLists.txt  front.c  opencc-gtk.c  opencc-gtk.h
rimeschema/: CMakeLists.txt
rimeschema/lib/yaml/: CMakeLists.txt
rimeschema/src/: CMakeLists.txt  front.c  front.h  rimecfg.c  rimecfg.h  rimeschema.c  rimeschema.h
shell/: allvideo.sh  playvideo
shell/mozilla/: dlflash.sh  extension.sh  firefox-shm.sh
time/: dcount.c  lunar.c  table.h
weather/: CMakeLists.txt
weather/cmake/: FindJSONC.cmake
weather/src/: CMakeLists.txt  curl.c  func.h  json.c  mem.c  mem.h  parse.c  session.c  session.h  static.c  weather.c  weather.h
