cmake_minimum_required(VERSION 2.8)
project(opencc-gtk)

option(USE_SELECTION_PRIMARY
	"Use primary selection instead of clipboard selection." ON)
option(USE_GTK3 "Use GTK3 instead of GTK2." ON)

find_package(PkgConfig REQUIRED)
if(USE_GTK3)
	pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
	include_directories(${GTK3_INCLUDE_DIRS})
	link_directories(${GTK3_LIBRARY_DIRS})
	add_definitions(${GTK3_CFLAGS_OTHER})
	add_definitions(-DENABLE_GTK3_SUPPORT)
	message(STATUS "Enable GTK3 support")
else(NOT USE_GTK3)
	pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
	include_directories(${GTK2_INCLUDE_DIRS})
	link_directories(${GTK2_LIBRARY_DIRS})
	add_definitions(${GTK2_CFLAGS_OTHER})
	message(STATUS "Enable GTK2 support")
endif(USE_GTK3)

if(USE_SELECTION_PRIMARY)
	message(STATUS "Enable SELECTION_PRIMARY support.")
	add_definitions("-DUSE_SELECTION_PRIMARY")
else(NOT USE_SELECTION_PRIMARY)
	message(STATUS "Enable SELECTION_CLIPBOARD support.")
endif(USE_SELECTION_PRIMARY)
add_subdirectory(src)
